--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Minesweeper Twitter Bot",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node src",
+    "start": "babel-node --stage 0 src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
