--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "minetweeter",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Minesweeper Twitter Bot",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/babel-node --stage 0 src",
+    "start": "babel-node --stage 0 src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "babel": "^5.4.7"
-  },
   "dependencies": {
+    "babel": "^5.4.7",
     "immutable": "^3.7.3",
     "twit": "^1.1.20"
   }
